Fix alignment of Matches nav

--- a/src/scss/Matches.scss
+++ b/src/scss/Matches.scss
@@ -9,8 +9,11 @@
     font-size: 1.2rem;
     margin-bottom: 1rem;
     a {
-      font-size: 3rem;
-      margin: 1rem;
+      font-size: 4rem;
+      margin: 1.4rem;
+    }
+    div {
+      margin-bottom: -0.7rem;
     }
   }
 }
